Fix to align left race-menu with top stage-menu

--- a/httpdocs/wp-content/themes/tourofcrete/style.css
+++ b/httpdocs/wp-content/themes/tourofcrete/style.css
@@ -1693,7 +1693,7 @@ Content Area
 		width:147px;
 		height:auto;
 		overflow:hidden;
-		margin-top:5px;						 			/* -K */
+		margin-top:-2px;						 			/* -K */
 	}
 	
 	.race-left .entry{
